# xg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
docs/: FAQ.md  INIT.md  INSTALLATION.md  TEMPLATES.md  USAGE.md
scripts/: install.sh
src/: git.rs  main.rs  rules.rs
src/cli/: create_go_app.rs  init.rs  mod.rs
src/commands/: go_cmd.rs  init_handler.rs  mod.rs
src/generators/go/: config.rs  echo.rs  gin.rs  mod.rs
src/utils/: validation.rs
src/writters/: json_writer.rs  mod.rs  text_writer.rs
templates/go/gin/: main.go
