[package]
name = "xg"
version = "0.1.0"
edition = "2021"
authors = ["Nishant <ndjangra1027@gmail.com>"]
description = "Safe Git with superpowers"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # CLI argument parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"